[package]
name = "mayo_vm"
version = "0.1.0"
edition = "2021"

[lib]
name = "mayo_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "mayo_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-view = { version = "5.1.0", features = ["BE"] }
enum-iterator = "1.4.0"
console = "0.15.5"
